--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="A massive list of CSS Questions and Answers"
+      content="A massive list of Real Interview Questions and Answers"
     />
     <meta
       name="google-site-verification"
@@ -41,7 +41,7 @@
       gtag("js", new Date());
       gtag("config", "UA-73073769-6");
     </script>
-    <title>CSS Questions</title>
+    <title>DevInt - for developers from developers.</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
